<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/group_item_vi"
            android:title="@string/group_item_vietnam">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_item_hot_vi"
                        android:title="@string/music_type_hot"
                        android:icon="@drawable/ic_menu_star"/>
                    <item
                        android:id="@+id/menu_item_remix_vi"
                        android:title="@string/music_type_remix"
                        android:icon="@drawable/ic_menu_star"/>
                    <item
                        android:id="@+id/menu_item_rap_vi"
                        android:title="@string/music_type_rap"
                        android:icon="@drawable/ic_menu_star"/>
                    <item
                        android:id="@+id/menu_item_country_vi"
                        android:title="@string/music_type_country"
                        android:icon="@drawable/ic_menu_star"/>
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/group_item_en"
            android:title="@string/group_item_english">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_item_pop_en"
                        android:title="@string/music_type_pop"
                        android:icon="@drawable/ic_menu_star"/>
                    <item
                        android:id="@+id/menu_item_remix_en"
                        android:title="@string/music_type_remix"
                        android:icon="@drawable/ic_menu_star"/>
                    <item
                        android:id="@+id/menu_item_rap_en"
                        android:title="@string/music_type_rap"
                        android:icon="@drawable/ic_menu_star"/>
                    <item
                        android:id="@+id/menu_item_dance_en"
                        android:title="@string/music_type_dance"
                        android:icon="@drawable/ic_menu_star"/>
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/group_item_korea"
            android:title="@string/group_item_korea">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_item_pop_korea"
                        android:title="@string/music_type_pop"
                        android:icon="@drawable/ic_menu_star"/>
                    <item
                        android:id="@+id/menu_item_remix_korea"
                        android:title="@string/music_type_remix"
                        android:icon="@drawable/ic_menu_star"/>
                    <item
                        android:id="@+id/menu_item_rap_korea"
                        android:title="@string/music_type_rap"
                        android:icon="@drawable/ic_menu_star"/>
                    <item
                        android:id="@+id/menu_item_dance_korea"
                        android:title="@string/music_type_dance"
                        android:icon="@drawable/ic_menu_star"/>
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/group_item_china"
            android:title="@string/group_item_china">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_item_pop_china"
                        android:title="@string/music_type_pop"
                        android:icon="@drawable/ic_menu_star"/>
                    <item
                        android:id="@+id/menu_item_remix_china"
                        android:title="@string/music_type_remix"
                        android:icon="@drawable/ic_menu_star"/>
                    <item
                        android:id="@+id/menu_item_rap_china"
                        android:title="@string/music_type_rap"
                        android:icon="@drawable/ic_menu_star"/>
                    <item
                        android:id="@+id/menu_item_dance_china"
                        android:title="@string/music_type_dance"
                        android:icon="@drawable/ic_menu_star"/>
                </group>
            </menu>
        </item>
    </group>
</menu>